config/edge_envoy.yaml
static_resources:
  listeners:
  - name: https
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_params:
              tls_minimum_protocol_version: TLSv1_2
              tls_maximum_protocol_version: TLSv1_3
            tls_certificates:
              certificate_chain:
                filename: /etc/letsencrypt/live/oldno.name/fullchain.pem
              private_key:
                filename: /etc/letsencrypt/live/oldno.name/privkey.pem
      filters:
      - name: envoy.filters.network.local_ratelimit
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.local_ratelimit.v3.LocalRateLimit
          stat_prefix: https_lrl
          token_bucket:
            max_tokens: 60
            tokens_per_fill: 5
            fill_interval: 5s
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: http_routes
            virtual_hosts:
            - name: pizza_service
              domains: ["pizza.*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: pizza
            - name: recipes_service
              domains: ["recipes.*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: recipes
            - name: mpoegel_service
              domains: ["matt.*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: mpoegel.github.io
            - name: photos_server
              domains: ["photos.*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: photos
            - name: login_service
              domains: ["login.*"]
              routes:
              - match:
                  prefix: "/js/"
                route:
                  cluster: login
              - match:
                  prefix: "/realms/"
                route:
                  cluster: login
              - match:
                  prefix: "/resources/"
                route:
                  cluster: login
              - match:
                  prefix: "/robots.txt"
                route:
                  cluster: login
            - name: default
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: pizza
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: pizza
    type: STRICT_DNS
    load_assignment:
      cluster_name: pizza
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: pizza
                port_value: 1995
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: pizza-blue
                port_value: 1995
  - name: recipes
    type: LOGICAL_DNS
    load_assignment:
      cluster_name: recipes
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: caddy
                port_value: 8001
  - name: mpoegel.github.io
    type: LOGICAL_DNS
    load_assignment:
      cluster_name: mpoegel.github.io
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: caddy
                port_value: 8002
  - name: photos
    type: LOGICAL_DNS
    load_assignment:
      cluster_name: photos
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: immich
                port_value: 2283
  - name: login
    type: LOGICAL_DNS
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_params:
            tls_minimum_protocol_version: TLSv1_2
            tls_maximum_protocol_version: TLSv1_3
          tls_certificates:
            certificate_chain:
              filename: /etc/letsencrypt/live/oldno.name/fullchain.pem
            private_key:
              filename: /etc/letsencrypt/live/oldno.name/privkey.pem
    load_assignment:
      cluster_name: login
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: keycloak26
                port_value: 8443
admin:
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 7000
